--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Istasyon Patron</string>
-    <string name="title_activity_main">Istasyon Patron</string>
+    <string name="app_name">Ti-Shift</string>
+    <string name="title_activity_main">Ti-Shift</string>
     <string name="package_name">tr.com.istasyon.patron</string>
     <string name="custom_url_scheme">tr.com.istasyon.patron</string>
 </resources>
