--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Ti-Shift</string>
     <string name="title_activity_main">Ti-Shift</string>
-    <string name="package_name">tr.com.istasyon.patron</string>
-    <string name="custom_url_scheme">tr.com.istasyon.patron</string>
+    <string name="package_name">com.tiginteknoloji.tishift</string>
+    <string name="custom_url_scheme">com.tiginteknoloji.tishift</string>
 </resources>
